Sending emails is finished.
