# api/api/src/main/kotlin/api/request/KontaktObrazecReq.kt
@@ -3,7 +3,7 @@ package si.urosjarc.server.api.response
 import kotlinx.serialization.Serializable
 
 @Serializable
-data class KontaktReq(
+data class KontaktObrazecReq(
     val ime_priimek: String,
     val email: String,
     val telefon: String,
