# api/api/src/main/kotlin/api/routes/index.kt
@@ -3,6 +3,7 @@ package api.routes
 import api.extend.client_error
 import api.extend.request_info
 import api.request.NapakaReq
+import api.response.KontaktObrazecRes
 import domain.Napaka
 import io.ktor.resources.*
 import io.ktor.server.application.*
@@ -15,7 +16,7 @@ import io.ktor.server.routing.*
 import org.apache.logging.log4j.kotlin.logger
 import org.koin.ktor.ext.inject
 import services.DbService
-import si.urosjarc.server.api.response.KontaktReq
+import si.urosjarc.server.api.response.KontaktObrazecReq
 import use_cases_api.Sprejmi_kontaktni_obrazec
 
 @Resource("")
@@ -62,7 +63,7 @@ fun Route.index() {
     }
 
     this.post<index.kontakt> {
-        val body = this.call.receive<KontaktReq>()
+        val body = this.call.receive<KontaktObrazecReq>()
         when (val r = sprejmi_kontaktni_obrazec.exe(
             ime_priimek = body.ime_priimek,
             email = body.email,
@@ -70,7 +71,14 @@ fun Route.index() {
             vsebina = body.vsebina
         )) {
             is Sprejmi_kontaktni_obrazec.Rezultat.WARN -> this.call.client_error(r.info)
-            is Sprejmi_kontaktni_obrazec.Rezultat.PASS -> this.call.respond(r)
+            is Sprejmi_kontaktni_obrazec.Rezultat.PASS -> this.call.respond(
+                KontaktObrazecRes(
+                    oseba = r.obrazec.oseba,
+                    telefon = r.obrazec.telefon,
+                    email = r.obrazec.email,
+                    sporocila = r.sporocila
+                )
+            )
         }
     }
 }
